src/styles/index.css
.hero {
    position: relative;
    width: 100%;
    height: 100vh;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #1D1E20;
}

.hero-slides {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
}

.hero-slide {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 1;
    opacity: 0;
    transition: opacity 1s ease-in-out;
}

.hero-progress-container {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 4px;
    background: rgba(255, 255, 255, 0.2);
    z-index: 10;
}

.hero-progress-bar {
    height: 100%;
    background: #fff;
    width: 0%;
}

.hero-bg-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
    filter: brightness(60%);
}

.hero-slide.active {
    opacity: 1;
}

.hero-attribution {
    position: absolute;
    bottom: 20px;
    right: 20px;
    background-color: rgba(0,0,0,.5);
    padding: 10px;
    font-size: 12px;
}

.hero-overlay {
    position: relative;
    z-index: 3;
    text-align: center;
    color: #fff;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
}

.hero-text-box {
    h1 {
        font-size: 400%;
        font-weight: 600;
        margin: 0;
    }

    p {
        font-size: 1.5rem;
        font-weight: 300;
        margin-top: 0.5rem;
    }
}

.bold {
    font-weight: 600;
}

.hero-logos {
    display: flex;
    gap: 2rem;
    justify-content: center;
    align-items: center;
}

.hero-logo {
    height: 35px;
    width: auto;
}

.event-info-container {
    display: flex;
    justify-content: space-between;
}

.event-info-block {
    flex: 1;
    padding: 80px 150px 80px 150px;
    text-align: center;
    border-top: 1px solid #ddd;
}

.info-text {
    position: relative;
    z-index: 2;
    justify-content: center;
    align-items: center;
    overflow: hidden;

    h2 {
        margin-bottom: 20px;
    }

    p {
        font-weight: 300;
        margin-bottom: 1rem;
    }
}

.event-info-button {
    display: inline-block;
    margin-top: 15px;
    padding: 10px 20px;
    background-color: transparent;
    color: white;
    border: solid white;
}

.tickets {
    position: relative;
    background-color: #FAAFA0;
    z-index: 1;
}

.tickets::before {
    content: "\f145"; /* fa-ticket */
    font-family: "Font Awesome 6 Free";
    font-weight: 900;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(-15deg);
    font-size: 23rem;
    color: rgba(0, 0, 0, 0.07);
    pointer-events: none;
    transition: transform 250ms;
    z-index: 1;
}

.tickets:has(.tickets-button:hover)::before {
    transform: translate(-50%, -48%) rotate(-10deg) scale(1.05);
    color: rgba(0, 0, 0, 0.09);
    z-index: 1;
}

.tickets-text {
    color: #fff;
}

.proposals {
    position: relative;
    background-color: rgb(150, 158, 246);
}

.proposals::before {
    content: "\f51b"; /* fa-chalkboard */
    content: "\f3c9"; /* fa-microphone-lines */
    font-family: "Font Awesome 6 Free";
    font-weight: 900;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%) rotate(15deg);
    font-size: 23rem;
    color: rgba(0, 0, 0, 0.07);
    pointer-events: none;
    transition: transform 250ms;
}

.proposals:has(.proposals-button:hover)::before {
    transform: translate(-50%, -48%) rotate(10deg) scale(1.05);
    color: rgba(0, 0, 0, 0.09);
    z-index: 1;
}

.proposals-text {
    color: #fff;
}

.summary {
    background-color: #f8f8f8;
}

.summary-text {
    color: #555;
}

